--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,15 @@
 {
+    "workbench.startupEditor": "none",
     "workbench.editorAssociations": 
         {
             "*.md": "vscode.markdown.preview.editor",
-        }
+        },
+    "terminal.integrated.tabs.enabled": false,
+    "workbench.panel.defaultLocation": "right",
+    "workbench.panel.opensMaximized": "preserve",
+    "editor.minimap.enabled": false,
+    "terminal.integrated.defaultLocation": "view",
+    "workbench.editor.showTabs": false,
+    "breadcrumbs.enabled": false,
+    "zenMode.fullScreen": false
 }
