--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,10 @@
     "workbench.statusBar.visible": false,
     "workbench.panel.defaultLocation": "right",
     "workbench.panel.opensMaximized": "preserve",
-    "workbench.activityBar.visible": false,
     "editor.minimap.enabled": false,
     "terminal.integrated.defaultLocation": "view",
-    "workbench.editor.showTabs": false,
+    "workbench.editor.showTabs": "single",
     "breadcrumbs.enabled": false,
-    "zenMode.fullScreen": false
+    "zenMode.fullScreen": false,
+    "workbench.activityBar.location": "hidden"
 }
