--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,10 +17,10 @@ tasks:
       bash /workspace/fusionauth-gitpod-install/install.sh   
       bash /workspace/fusionauth-gitpod-install/ports.sh
     command: |
+      gp open welcome.md
       pip3 install httpie 
       mkdir ~gitpod/.config/httpie
       cp .config/httpie/config.json ~gitpod/.config/httpie
-      gp open intro.md
       fusionauth/bin/startup.sh
       echo "Waiting for the FusionAuth server to start up"
       bash serverup.sh
@@ -29,6 +29,8 @@ tasks:
       npm install
       npm run dev &
       gp preview `gp url 9011`/admin
+      gp open intro.md
+      
 
 ports:
   - port: 9011
