--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,18 +16,17 @@ tasks:
     init: |
       bash /workspace/fusionauth-gitpod-install/install.sh   
       bash /workspace/fusionauth-gitpod-install/ports.sh
-    command: |
       pip3 install httpie 
       mkdir ~gitpod/.config/httpie
       cp .config/httpie/config.json ~gitpod/.config/httpie
       fusionauth/bin/startup.sh
-      echo "Waiting for the FusionAuth server to start up"
-      bash serverup.sh
       echo "Starting up the ChangeBank React application"
       cd complete-application
       npm install
-      npm run dev &
-      gp preview `gp url 9011`/admin & gp open ../choose.md
+      npm run dev
+    command: |
+      echo "Waiting for the FusionAuth server to start up"
+      bash serverup.sh
 
 ports:
   - port: 9011
